--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -1,57 +1,56 @@
 .header {
-    background-color: transparent;
-    padding: 10px 40px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 6rem;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    align-items: center;
+  background-color: var(--quaternary);
+  padding: 10px 40px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 6rem;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  align-items: center;
 }
 
 .linksList {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    height: 100%;
-    gap: 50px;
-    padding-left: 60px;
-    padding-right: 40px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  height: 100%;
+  gap: 50px;
+  padding-left: 60px;
+  padding-right: 40px;
 }
 
 .linksList a {
-    text-decoration: none;
-    color: var(--primary);
-    font-weight: 700;
-    font-size: 14px;
+  text-decoration: none;
+  color: var(--primary);
+  font-weight: 700;
+  font-size: 14px;
 }
 
 .adminDiv {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: var(--secondary);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--secondary);
 }
 
 .sairDiv {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: var(--tertiary);
-    cursor: pointer;
-
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--tertiary);
+  cursor: pointer;
 }
 
 .sairDiv:hover {
-    transform: translateX(3px);
+  transform: translateX(3px);
 }
 
 .img {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
 }
