--- a/styles/components/SignupForm.module.css
+++ b/styles/components/SignupForm.module.css
@@ -5,6 +5,11 @@
     gap: 2vw
 }
 
+.active {
+    transform: scale(1.1);
+    opacity: 0.5;
+}
+
 .signupForm {
     flex: 1;
     display: grid;
@@ -60,6 +65,11 @@
     border-radius: 5px;
     text-align: center;
     margin-top: 5px;
+}
+
+#submitBtn:hover {
+    opacity: 0.8;
+    cursor: pointer;
 }
 
 .profileContainer {
@@ -124,7 +134,6 @@
 
 .profileButton:hover {
     transform: scale(1.1);
-    /*border-color: blue;*/
 }
 
 .profileChoice::-webkit-scrollbar {
