--- a/styles/components/EvaluationCard.module.css
+++ b/styles/components/EvaluationCard.module.css
@@ -1,13 +1,24 @@
 .evaluationCard {
     display: flex;
     align-items: center;
-    min-width: 300px;
     justify-content: space-between;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.userInfo{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .watchedOn {
     color: var(--quinary);
     font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .watchedOnComponent{
